[package]
name = "act4"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30"   
chrono = "0.4"    
uom = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
heim = { version = "0.1.0-beta.3", features = ["disk"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
