[package]
name = "defense_system"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = { version = "0.30", features = ["multithread"] }
chrono = "0.4"