[package]
name = "monitoreo"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sysinfo = "0.30"
heim = { version = "0.1.0-beta.3", features = ["disk"] }
futures = "0.3"
uom = "0.36.0"
